--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script src="js/hammer.min.js"></script>
 <script src="js/three.js"></script>
 <script src="js/geometry.js"></script>
-<script src="js/menu.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
