--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
 		</div>
 
 		<div class="output">
-			<!--
-			<label>Drag Distance:</label> <input type="text" id="dragDistance" />
-			<label>Drag Angle:</label> <input type="text" id="dragAngle" />
-			<label>Drag Direction:</label> <input type="text" id="dragDirection" />
-			<label>Pinch Scale</label> <input type="text" id="pinchScale" />
-			-->
-			<p><span style="font-weight:bold">To Zoom:</span> <span style="font-style:italic">Pinch, Double-Tap or Double-Click</span></p>
+			<p>
+				<span style="font-weight:bold">To Zoom:</span> <span style="font-style:italic">Pinch, Double-Tap or Double-Click</span> | 
+				<span style="font-weight:bold">To Rotate:</span> <span style="font-style:italic">Touch or Click & Drag</span</p>
 		</div>
 
 	</div>
