--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		</div>
 
 		<div class="output">
-			<p>
-				<span style="font-weight:bold">To Zoom:</span> <span style="font-style:italic">Pinch, Double-Tap or Double-Click</span> | 
-				<span style="font-weight:bold">To Rotate:</span> <span style="font-style:italic">Touch or Click & Drag</span</p>
+				<span style="font-weight:bold">Zoom:</span> <span style="font-style:italic">Pinch, Tap or Double-Click</span> | 
+				<span style="font-weight:bold">Rotate:</span> <span style="font-style:italic">Touch or Click & Drag</span> |
+				<span style="font-weight:bold">Scale:</span> <input type="text" value="1" name="scaleValue" id="scaleValue" style="width:25px"/>&nbsp;&nbsp;<input type="range" min=".1" max="3" step=".1" value="1" name="scaleSlider" oninput="javascript:onSliderChange()" id="scaleSlider"/>
 		</div>
 
 	</div>
@@ -30,6 +30,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/hammer.min.js"></script>
 <script src="js/three.js"></script>
+<script src="js/STLLoader.js"></script>
 <script src="js/geometry.js"></script>
 <script src="js/app.js"></script>
 
